--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ html {
     position: absolute;
     width: 25%;
     height: 100%;
-    background-color: #eee;
+    background-color: #3498db;
     display: block;
     left: 0%;
     top: 0%;
