--- a/index.css
+++ b/index.css
@@ -27,9 +27,9 @@ html {
     position: absolute;
     overflow: auto;
     overscroll-behavior: contain;
-    height: 50%;
+    height: 60%;
     width: 100%;
-    padding-top: 10%;
+    top: 10%;
 }
 
 #text-box {
@@ -41,8 +41,24 @@ html {
     top: 70%;
 }
 
-.CodeMirror,
-.CodeMirror-scroll {
-    max-height: 180px;
-    min-height: 180px;
+#text-box > form {
+    height: 100%;
+}
+
+#text-box > form > textarea {
+    resize: none;
+    position: relative;
+    top: 10%;
+    height: 88%;
+    width: 74%;
+}
+
+#side-top-ul > li {
+    display: inline-block;
+    margin-left: 2.5%
+}
+
+#side-top-ul {
+    list-style: none;
+    padding: 0% 5%;
 }
