--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ html {
 }
 
 #main {
-    height: 100%;
+    height: 100vh;
     padding: 0%;
 }
 
@@ -25,6 +25,19 @@ html {
     padding-left: 25%;
     height: 100%;
     width: 75%;
+}
+
+#content-top {
+    height: 10%;
+}
+
+#content-top img {
+    height: 60%;
+    display: inline-block;
+}
+
+#content-top h3 {
+    display: inline-block;
 }
 
 #content-main {
@@ -114,6 +127,7 @@ html {
     width: 50%;
     height: auto;
 }
+
 
 #submit {
     display: block;
